@startuml er-model
title "Party Time ER-Modell"
skinparam linetype ortho

entity Account {
    * id: Long <<generated>>
    --
    * email: varchar(255)
    * emailVerified: boolean
    * name: varchar(255)
    * pwHash: varachar(255)
    * emailVerificationCode: varachar(255)
    * passwordVerificationCode: varachar(255)
}

entity Invitation {
    * account_id: Long <<Account FK>>
    * event_id: Long <<Event FK>>
    --
    * status: ENUM('INVITED', 'PARTICIPATING', 'REJECTED')
}

entity Event {
    * id: Long <<generated>>
    --
    * organizer_id: Long <<Account FK>>
    * name: varachar(255)
    * dateTime: timestamp
    * address: Long <<Address FK>>
}

entity Address {
    * id: Long <<generated>>
    --
    * addressLine: varachar(255)
    * addressAddition: varachar(255)
    * zip: varachar(255)
    * city: varachar(255)
    * country: varachar(255)
}

Account ||--o{ Event
Account }o--o{ Invitation
Invitation }o--o{ Event
Event }o--|| Address
@enduml
